@@ -1,5 +1,10 @@
 2010-05-09  El Dragon  <thedragon@the-dragons-nest.co.uk>
 
+	* VorbisFile.cs: Implemented IDisposable for proper clean-up
+	  of file handles
+
+2010-05-09  El Dragon  <thedragon@the-dragons-nest.co.uk>
+
 	* VorbisFile.cs: Added comments to describe change in previous
 	  revision
 
